--- a/HandsOnSession/docs/HandsOnSession.Rmd
+++ b/HandsOnSession/docs/HandsOnSession.Rmd
@@ -145,7 +145,9 @@ See @SchadEtAlcontrasts for a tutorial on contrast coding.
 ## sum contrast coding, +1 for OR and -1 for SR:
 gge1crit$so<-ifelse(gge1crit$condition=="objgap",1,-1)
 library(lme4)
-m<-lmer(log(rawRT)~so+(1+so|subject) + (1+so|item),gge1crit,control=lmerControl(calc.derivs=FALSE))
+m<-lmer(log(rawRT)~so+(1+so|subject) + (1+so|item),gge1crit,
+        control=lmerControl(calc.derivs=FALSE))
+summary(m)
 ## extract estimates of fixed-effects parameters:
 beta<-summary(m)$coefficients[,1]
 ## extract standard deviation estimate:
@@ -169,6 +171,8 @@ Sigma_w<-SIN::sdcor2cov(stddev=item_ranefsd,
 
 ### Calculate power for a future study
 
+We load a function to generate fake data:
+
 ```{r cache=TRUE,echo=TRUE}
 source("../R/gen_fake_lnorm.R")
 nsim<-100
@@ -183,14 +187,14 @@ m<-lmer(log(rt)~so+(1+so|subj)+(1+so|item),
         control=lmerControl(calc.derivs=FALSE))
 tvals[i]<-summary(m)$coefficients[2,3]
 }
-## bad news:
+## this is only valid if the true effect is 0.06 on log ms scale:
 mean(abs(tvals)>2)
 ```
 
 Write a function for computing power and Type I error (this is an example of code refactoring):
 
-```{r}
-compute_power_type2<-function(nsim=100,b=-0.036,
+```{r cache=TRUE}
+compute_power_type2<-function(nsim=100,b=0.06,
                         nsubj=40,nitem=16){
   tvals<-c()
 for(i in 1:nsim){
@@ -228,7 +232,7 @@ compute_power_type2(b=0)
 
 This is informative about whether we should even be trying to fit a maximal model given the sample sizes of subjects and items that we plan to have:
 
-```{r}
+```{r cache=TRUE}
 nsim<-100
 int<-slope<-stddev<-sigma_u0<-sigma_u1<-sigma_w0<-
   sigma_w1<-rho_u<-rho_w<-c()
@@ -306,6 +310,11 @@ The basic principle is always to think about what information the user will  nee
 One simple approach is to 
 
 - create a package
+
+```{r eval=FALSE,echo=TRUE}
+usethis::create_package("mypackage")
+```
+
 - put it on osf.io or github or both
 
 I will demonstrate data installation in class.
@@ -368,7 +377,7 @@ Sigma_w<-SIN::sdcor2cov(stddev=item_ranefsd,
 #compute_power_type2(nsubj = 200)
 ```
 
-# Exercise 2
+## Exercise 2
 
 This exercise demonstrates why it's important to pre-specify your analysis before you collect your data.
 
